Store original task frequency for rotation context
The commit updates how multiple daily tasks handle user rotations by
preserving the original frequency count and adjusting occurrence calculations
to support fair scheduling.

--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -6465,25 +6465,15 @@
                                     occurrence: occurrence,
                                     totalOccurrences: timesPerDay,
                                     timesPerDay: 1, // Each occurrence is now a single daily task
+                                    originalTimesPerDay: timesPerDay, // Keep original for rotation context
                                     // Assign specific due time for this occurrence
                                     dueTimes:
                                         task.dueTimes &&
                                         task.dueTimes[occurrence - 1]
                                             ? [task.dueTimes[occurrence - 1]]
                                             : undefined,
-                                    // For rotation tasks, adjust user assignment
-                                    users:
-                                        settings === "Rotation"
-                                            ? [
-                                                  getFairRotationUserForOccurrence(
-                                                      task.users,
-                                                      fairRotationEnabled
-                                                          ? globalOccurrenceIndex
-                                                          : occurrence - 1,
-                                                      fairRotationEnabled,
-                                                  ),
-                                              ]
-                                            : task.users,
+                                    // For rotation tasks, keep all users for schedule-based assignment
+                                    users: task.users,
                                     currentTurnIndex:
                                         settings === "Rotation"
                                             ? fairRotationEnabled
