Add fair rotation task management system endpoints
diff --git a/backend/server.js b/backend/server.js
index 1d0ac14c..621767df 100644
--- a/backend/server.js
+++ b/backend/server.js
@@ -4250,6 +4250,136 @@ app.delete("/api/notifications", async (req, res) => {

 // Endpoint helpCenter.html //

+// Fair Rotation Dynamic System API Endpoints
+
+// GET /api/task-completions - Get completion history for a task
+app.get("/api/task-completions", async (req, res) => {
+  const { adminEmail, taskTitle, date } = req.query;
+
+  try {
+    if (!adminEmail || !taskTitle || !date) {
+      return res.status(400).json({ error: "Missing required parameters" });
+    }
+
+    const db = await connectDB();
+    const admins = db.collection("admins");
+    const admin = await admins.findOne({ email: adminEmail });
+
+    if (!admin) {
+      return res.status(404).json({ error: "Admin not found" });
+    }
+
+    // Extract completion history for the specific task and date
+    const completions = [];
+    const normalizedDate = new Date(date).toLocaleDateString("sv-SE");
+
+    // Check all tasks for completions
+    if (admin.tasks) {
+      admin.tasks.forEach((task) => {
+        if (
+          task.title === taskTitle ||
+          (task.originalTitle &&
+            task.originalTitle === taskTitle.split(" - ")[0])
+        ) {
+          if (task.completedDates && task.completedDates[normalizedDate]) {
+            task.completedDates[normalizedDate].forEach((completion) => {
+              completions.push({
+                occurrence: task.occurrence || 1,
+                completedBy: completion.completedBy || completion.user,
+                completedAt: completion.completedAt || completion.timestamp,
+                taskTitle: task.title,
+              });
+            });
+          }
+        }
+      });
+    }
+
+    res.json({ success: true, completions });
+  } catch (err) {
+    console.error("Error fetching task completions:", err);
+    res.status(500).json

--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -863,6 +863,8 @@
         </style>
     </head>
     <body>
+        <!-- Fair Rotation Dynamic System -->
+        <script src="../../fair-rotation-dynamic-system.js"></script>
         <div class="date-header">
             <div class="month-nav">
                 <button id="prevMonth">&lt;</button>
@@ -1157,6 +1159,32 @@
             function isUserCurrentlyAssigned(task, selectedDate, userName) {
                 // Check original assignments
                 const isOriginallyAssigned = task.users.includes(userName);
+
+                // For rotation tasks with occurrences, check specific assignment
+                if (
+                    task.settings &&
+                    task.settings.includes("Rotation") &&
+                    typeof task.currentTurnIndex !== "undefined"
+                ) {
+                    // This is a rotation task occurrence - check who is currently assigned
+                    const currentAssigneeIndex = task.currentTurnIndex;
+                    const currentAssignee = getCurrentAssignee(
+                        task,
+                        selectedDate,
+                        currentAssigneeIndex,
+                    );
+
+                    console.log(`🎯 Checking rotation occurrence assignment:`, {
+                        taskTitle: task.title,
+                        occurrence: task.occurrence || "N/A",
+                        currentTurnIndex: task.currentTurnIndex,
+                        currentAssignee: currentAssignee,
+                        userName: userName,
+                        isAssigned: currentAssignee === userName,
+                    });
+
+                    return currentAssignee === userName;
+                }
 
                 // Check temporary replacements
                 let isReplacementAssigned = false;
@@ -5471,6 +5499,18 @@
 
                     console.log("✅ finishTask: Task submitted", data);
                     popup.textContent = `Task Submitted by ${currentUser}! Waiting for Parent Review`;
+
+                    // 🔄 FAIR ROTATION: Trigger recalculation after task completion
+                    if (window.onFairRotationTaskCompleted) {
+                        console.log(
+                            "🔄 Triggering fair rotation recalculation...",
+                        );
+                        await window.onFairRotationTaskCompleted(
+                            task.title,
+                            currentUser,
+                            today,
+                        );
+                    }
 
                     // Update the specific task's turn display immediately
                     const taskItems = document.querySelectorAll(".task-item");
