--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -2459,60 +2459,10 @@
                     >
                         When enabled, assigns tasks to the person who has
                         completed them the least, ensuring balanced workload
-                        distribution across all family members.
+                        distribution across all assigned users. If there's a
+                        tie, the task goes to the one who waited longest since
+                        their last task.
                     </p>
-
-                    <!-- Advanced Fair Rotation Options -->
-                    <div
-                        id="fairRotationAdvanced"
-                        style="
-                            display: none;
-                            border-top: 1px solid rgba(255, 193, 7, 0.3);
-                            padding-top: 15px;
-                        "
-                    >
-                        <div
-                            style="
-                                display: flex;
-                                align-items: center;
-                                justify-content: space-between;
-                                margin-bottom: 8px;
-                            "
-                        >
-                            <label
-                                for="fairRotationTimeBasedToggle"
-                                style="
-                                    color: var(--text-color);
-                                    font-weight: 500;
-                                    font-size: 14px;
-                                    cursor: pointer;
-                                "
-                                >Time-based tie breaking</label
-                            >
-                            <label
-                                class="switch"
-                                style="margin: 0; transform: scale(0.8)"
-                            >
-                                <input
-                                    type="checkbox"
-                                    id="fairRotationTimeBasedToggle"
-                                />
-                                <span class="slider"></span>
-                            </label>
-                        </div>
-                        <p
-                            style="
-                                font-size: 11px;
-                                color: rgba(109, 76, 65, 0.7);
-                                margin: 0;
-                                line-height: 1.3;
-                            "
-                        >
-                            When users have equal completion counts, assign to
-                            whoever completed the task longest ago instead of
-                            using rotation order.
-                        </p>
-                    </div>
                 </div>
 
                 <!-- Rotation Timing Options -->
@@ -4121,12 +4071,6 @@
                             : "none";
                     document.getElementById("fairRotationToggle").checked =
                         editTask.fairRotation || false;
-                    document.getElementById(
-                        "fairRotationTimeBasedToggle",
-                    ).checked = editTask.fairRotationTimeBased || false;
-                    document.getElementById(
-                        "fairRotationAdvanced",
-                    ).style.display = editTask.fairRotation ? "block" : "none";
                     document.getElementById("parentApprovalToggle").checked =
                         editTask.parentApproval !== undefined
                             ? editTask.parentApproval
@@ -5428,19 +5372,9 @@
             // Fair Rotation Toggle Logic
             const fairRotationToggle =
                 document.getElementById("fairRotationToggle");
-            const fairRotationAdvanced = document.getElementById(
-                "fairRotationAdvanced",
-            );
 
             fairRotationToggle.addEventListener("change", () => {
-                if (fairRotationToggle.checked) {
-                    fairRotationAdvanced.style.display = "block";
-                } else {
-                    fairRotationAdvanced.style.display = "none";
-                    document.getElementById(
-                        "fairRotationTimeBasedToggle",
-                    ).checked = false;
-                }
+                // Fair rotation toggle handler - no additional options needed
             });
 
             buzzpointsToggle.addEventListener("change", () => {
@@ -6455,9 +6389,6 @@
                             fairRotation:
                                 document.getElementById("fairRotationToggle")
                                     .checked,
-                            fairRotationTimeBased: document.getElementById(
-                                "fairRotationTimeBasedToggle",
-                            ).checked,
                             parentApproval: document.getElementById(
                                 "parentApprovalToggle",
                             ).checked,
@@ -6607,8 +6538,6 @@
                                     users: task.users,
                                     // Copy fair rotation settings to sub-tasks
                                     fairRotation: task.fairRotation,
-                                    fairRotationTimeBased:
-                                        task.fairRotationTimeBased,
                                     rotationSettings: task.rotationSettings,
                                     currentTurnIndex:
                                         settings === "Rotation"
@@ -7519,6 +7448,22 @@
                             });
                             let savedCount = 0;
                             for (const taskToSave of tasksToSave) {
+                                // 🔧 IMPORTANT: Remove fair rotation properties before saving
+                                // The backend has issues processing these properties, causing task completion flow problems
+                                // Fair rotation logic will be implemented separately and doesn't affect basic task completion
+                                const taskForSave = { ...taskToSave };
+
+                                // Remove fair rotation properties that cause backend issues
+                                delete taskForSave.fairRotation;
+                                delete taskForSave.globalOccurrenceIndex;
+                                delete taskForSave.fairRotationSchedule;
+
+                                console.log(
+                                    "💾 Saving task:",
+                                    taskForSave.title,
+                                    "(fair rotation properties excluded for backend compatibility)",
+                                );
+
                                 const response = await fetch(
                                     "https://beemazing1.onrender.com/api/tasks",
                                     {
@@ -7528,7 +7473,7 @@
                                         },
                                         body: JSON.stringify({
                                             adminEmail: currentAdmin,
-                                            task: taskToSave,
+                                            task: taskForSave,
                                         }),
                                     },
                                 );
