--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -2008,6 +2008,8 @@
         <script src="/BeeMazing-A1/shared/predicted-schedule-system.js?t=${Date.now()}"></script>
         <script src="/BeeMazing-A1/local-fair-rotation-system.js?t=${Date.now()}"></script>
         <script src="/BeeMazing-A1/enhanced-fair-rotation-system.js?t=${Date.now()}"></script>
+        <script src="/BeeMazing-A1/apply-hybrid-timestamp-fix.js?t=${Date.now()}"></script>
+        <script src="/BeeMazing-A1/auto-fix-enhanced-fair-rotation.js?t=${Date.now()}"></script>
         <script src="/BeeMazing-A1/shared/avatar-system.js"></script>
 
         <script>
